Added the same trigger logic for before update as for before insert

--- a/src/classes/ReportFilterTriggerHandler.cls
+++ b/src/classes/ReportFilterTriggerHandler.cls
@@ -5,6 +5,11 @@ public class ReportFilterTriggerHandler {
         areObjectAndFieldEnteredCorrectly(reportFilterList);
     }
 
+    public static void onBeforeUpdate(List<Report_Filter__c> reportFilterList) {
+
+        areObjectAndFieldEnteredCorrectly(reportFilterList);
+    }
+
     public static void areObjectAndFieldEnteredCorrectly(List<Report_Filter__c> reportFilterList) {
 
         Map<String, Schema.SObjectType> globalDescribe = Schema.getGlobalDescribe();
